--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@ HO-01
 
     <div class="row">
         <div class="col-md-4">
-            <div class="card">
+            <div class="card card-product">
                 <!-- <div class="card-header card-header-primary">
                     <h4 class="card-title">本日のイベント</h4>
                     <p class="card-category"><span class="eventsCount"></span>件のイベントが開催中あるいは開催予定です</p>
@@ -32,7 +32,7 @@ HO-01
 
                 </div>
             </div>
-            <div class="card">
+            <div class="card card-product">
                 <div class="card-body">
                     <h4 class="card-title">
                         <i class="material-icons align-middle">storage</i>
@@ -51,12 +51,8 @@ HO-01
         </div>
 
         <div class="col-md-4">
-            <div class="card eventsWithAggregation">
-                <!-- <div class="card-header card-header-primary">
-                    <h4 class="card-title">本日のイベント</h4>
-                    <p class="card-category"><span class="eventsCount"></span>件のイベントが開催中あるいは開催予定です</p>
-                </div> -->
-                <div class="card-body ">
+            <div class="card eventsWithAggregation card-product">
+                <div class="card-body">
                     <h4 class="card-title">
                         <i class="material-icons align-middle">event</i>
                         <span class="pl-1">本日のイベント</span></h4>
@@ -80,7 +76,7 @@ HO-01
                     <a href="/events/screeningEvent" class="btn btn-sm btn-outline-primary">もっと見る</a>
                 </div>
             </div>
-            <div class="card">
+            <div class="card card-product">
                 <!-- <div class="card-header card-header-tabs card-header-primary">
                     <div class="nav-tabs-navigation">
                         <div class="nav-tabs-wrapper">
@@ -122,7 +118,7 @@ HO-01
         </div>
 
         <div class="col-md-4">
-            <div class="card">
+            <div class="card card-product">
                 <div class="card-body">
                     <h4 class="card-title">
                         <i class="material-icons align-middle">http</i>
@@ -138,7 +134,7 @@ HO-01
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card card-product">
                 <div class="card-body">
                     <h4 class="card-title">
                         <i class="material-icons align-middle">report</i>
