--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -51,6 +51,7 @@ MT-01
                                     <th>電話番号</th>
                                     <th>販売条件</th>
                                     <th>スクリーン</th>
+                                    <th>POS</th>
                                     <th>追加特性</th>
                                 </tr>
                             </thead>
@@ -74,6 +75,7 @@ MT-01
                                             <span>表示</span>
                                         </a>
                                     </td>
+                                    <td name="posCount">$posCount$</td>
                                     <td name="branchCode" class="">
                                         <a href="javascript:void(0)" class="showAdditionalProperty"
                                             data-branchCode="$branchCode$">
