--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,8 +24,6 @@ HO-01
                         <span class="pl-1">プロジェクト</span></h4>
                     </h4>
                     <dl>
-                        <dt>プロジェクト名称</dt>
-                        <dd><%= req.project.name %></dd>
                         <dt>プロジェクト ID</dt>
                         <dd><%= req.project.id %></dd>
                     </dl>
@@ -134,6 +132,7 @@ HO-01
                     </div>
                 </div>
             </div>
+
             <div class="card card-product">
                 <div class="card-body">
                     <h4 class="card-title">
@@ -141,6 +140,23 @@ HO-01
                         <span class="pl-1">Error Reporting</span></h4>
                     </h4>
                     <p class="card-category errorReporting"></p>
+                </div>
+            </div>
+
+            <div class="card card-product">
+                <div class="card-body">
+                    <h4 class="card-title">
+                        <i class="material-icons align-middle">payment</i>
+                        <span class="pl-1">集計(参考)</span></h4>
+                    </h4>
+                    <dl class="row mb-0">
+                        <dt class="col-md-3">予約</dt>
+                        <dd class="col-md-9 text-right"><span class="reservationCount"></span></dd>
+                        <dt class="col-md-3">発券</dt>
+                        <dd class="col-md-9 text-right"><span class="checkInCount"></span></dd>
+                        <dt class="col-md-3">入場</dt>
+                        <dd class="col-md-9 text-right"><span class="attendeeCount"></span></dd>
+                    </dl>
                 </div>
             </div>
         </div>
