--- a/views/reservations/_dataTables.ejs
+++ b/views/reservations/_dataTables.ejs
@@ -310,10 +310,9 @@
                                 $unitPriceSpec.referenceQuantity.value$
                             </td>
                             <td name="ticketedSeat">$ticketedSeat$</td>
-                            <td name="underName.name|slice:10__id">
-                                $underName.name$<br>
+                            <td name="id__underName.name|slice:10">
                                 <a href="javascript:void(0)" class="showUnderName" data-id="$id$">
-                                    表示
+                                    $underName.name$
                                 </a>
                             </td>
                             <td name="application.name|slice:15">$application.name$</td>
