--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -118,8 +118,8 @@ Aa-10
                                     <td name="duration|duration:minute">$duration$</td>
                                     <td name="contentRating">$contentRating$</td>
                                     <td name="distributorName">$distributorName$</td>
-                                    <td name="datePublished|date:YYYY-MM-DD">$datePublished$</td>
-                                    <td name="offers.availabilityEnds|date:YY-MM-DD HH:mm:ss">$offers.availabilityEnds$
+                                    <td name="datePublished|date:YYYY-MM-DD HH:mm:ss">$datePublished$</td>
+                                    <td name="offers.availabilityEnds|date:YYYY-MM-DD HH:mm:ss">$offers.availabilityEnds$
                                     </td>
                                     <td name="identifier__addtionalProperty">
                                         <a href="javascript:void(0)" class="showAdditionalProperty"
