--- a/views/home.ejs
+++ b/views/home.ejs
@@ -150,12 +150,14 @@ HO-01
                         <span class="pl-1">集計(参考)</span></h4>
                     </h4>
                     <dl class="row mb-0">
-                        <dt class="col-md-3">予約</dt>
-                        <dd class="col-md-9 text-right"><span class="reservationCount"></span></dd>
-                        <dt class="col-md-3">発券</dt>
-                        <dd class="col-md-9 text-right"><span class="checkInCount"></span></dd>
-                        <dt class="col-md-3">入場</dt>
-                        <dd class="col-md-9 text-right"><span class="attendeeCount"></span></dd>
+                        <dt class="col-md-4">予約</dt>
+                        <dd class="col-md-8 text-right"><span class="reservationCount"></span></dd>
+                        <dt class="col-md-4">発券</dt>
+                        <dd class="col-md-8 text-right"><span class="checkInCount"></span></dd>
+                        <dt class="col-md-4">入場</dt>
+                        <dd class="col-md-8 text-right"><span class="attendeeCount"></span></dd>
+                        <dt class="col-md-4">イベント期間</dt>
+                        <dd class="col-md-8 text-right"><span class="reservationFor"></span></dd>
                     </dl>
                 </div>
             </div>
