--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -1,4 +1,4 @@
-<div class="modal fade" id="newModal" tabindex="-1">
+<div class="modal fade" id="newModal">
     <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg">
         <div class="modal-content" role="document">
             <div class="modal-header">
@@ -268,8 +268,8 @@
                                                 <div class="input-group-append">
                                                     <span class="input-group-text">~</span>
                                                 </div>
-                                                <select class="form-control" name="endDayRelative">
-                                                    <option value="0">開始当日</option>
+                                                <select class="form-control" name="endDayRelative" style="width: 25%;">
+                                                    <option value="0" selected="selected">開始当日</option>
                                                     <option value="1">翌日</option>
                                                     <option value="2">2日後</option>
                                                     <option value="3">3日後</option>
