--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -28,6 +28,8 @@ Aa-11
         <%- include('./_dataTables', {  }) %>
     </div>
 
+    <%- include('show') %>
+
     <div class="modal fade" id="modal-reservation" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
