--- a/views/reservations/_dataTables.ejs
+++ b/views/reservations/_dataTables.ejs
@@ -278,14 +278,19 @@
                                     </label>
                                 </div>
                             </td>
-                            <td name="reservationNumber">
-                                $reservationNumber$
+                            <td name="id__reservationNumber">
+                                <a href="javascript:void(0)" class="showReservation" data-id="$id$">
+                                    $reservationNumber$
+                                </a>
                             </td>
                             <td name="bookingTime|date:YY-MM-DD HH:mm:ss">
                                 $bookingTime$
                             </td>
-                            <td class="reservationStatusTypeName" name="reservationStatusTypeName">
-                                $reservationStatusTypeName$</td>
+                            <td class="reservationStatusTypeName"
+                                name="previousReservationStatus__reservationStatus__reservationStatusTypeName">
+                                <a href="#"
+                                    title="$previousReservationStatus$ -> $reservationStatus$">$reservationStatusTypeName$</a>
+                            </td>
                             <td name="reservationFor.id__reservationFor.startDate|date:YY-MM-DD HH:mm">
                                 $reservationFor.id$<br>
                                 $reservationFor.startDate$
