### Fixed - 劇場作成処理を調整

--- a/views/places/movieTheater/form.ejs
+++ b/views/places/movieTheater/form.ejs
@@ -125,18 +125,18 @@
                         "typeOf": "Offer",
                         "eligibleQuantity": {
                         "typeOf": "QuantitativeValue",
-                        "maxValue": 0,
-                        "unitCode": ""
+                        "maxValue": 6,
+                        "unitCode": "C62"
                         },
                         "availabilityStartsGraceTime": {
                         "typeOf": "QuantitativeValue",
-                        "value": 0,
-                        "unitCode": ""
+                        "value": -2,
+                        "unitCode": "DAY"
                         },
                         "availabilityEndsGraceTime": {
                         "typeOf": "QuantitativeValue",
-                        "value": 0,
-                        "unitCode": ""
+                        "value": 1200,
+                        "unitCode": "SEC"
                         }
                     }) %>
                     </textarea>
