### Changed - イベントキャパシティ設定のバリデーション調整

--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -67,7 +67,7 @@
                                             </span>
                                         </a>
                                     </label>
-                                    <input class="form-control" type="text" name="maximumAttendeeCapacity"
+                                    <input class="form-control" type="number" name="maximumAttendeeCapacity"
                                         placeholder="10" maxlength=10>
                                 </div>
                             </div>
