--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -252,7 +252,13 @@
                                 </div>
                             </div>
 
-                            <% for (let i = 1; i <= 6; i++) { %>
+                            <%
+                            let numTimeTables = 1;
+                            if (allowMultipleEventTimeTables) {
+                                numTimeTables = 6;
+                            }
+                            %>
+                            <% for (let i = 1; i <= numTimeTables; i++) { %>
                             <tr>
                                 <td>
                                     <div class="form-row timeTable">
@@ -283,7 +289,7 @@
                                         </div>
                                         <div class="form-group bmd-form-group col-md-4 mt-0 pb-0">
                                             <select class="form-control" name="ticketTypeGroup">
-                                                <option value="" disabled selected>券種グループを選択</option>
+                                                <option value="" disabled selected>カタログ選択</option>
                                                 <% for (ticketType of ticketGroups) { %>
                                                 <option value="<%= ticketType.id %>">
                                                     <%= ticketType.name.ja %>
