--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -90,7 +90,7 @@
                                     </select>
                                 </div>
                                 <div class="form-group bmd-form-group col-md-4">
-                                    <label class="bmd-label-static" for="ticketTypeGroup">券種グループ</label>
+                                    <label class="bmd-label-static" for="ticketTypeGroup">カタログ</label>
                                     <select class="form-control" name="ticketTypeGroup">
                                         <option value="">選択してください</option>
                                         <% for (ticketType of ticketGroups) { %>
