--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -89,7 +89,8 @@
                                     </div>
                                 </div>
 
-                                <div class="form-group bmd-form-group col-md-6">
+                                <div
+                                    class="form-group bmd-form-group col-md-6<% if (!useAdvancedScheduling) { %> d-none<% } %>">
                                     <label class="bmd-label-static">曜日 <span class="text-danger">＊</span></label>
                                     <div class="form-check form-check-inline">
                                         <label class="form-check-label"><input class="form-check-input" type="checkbox"
@@ -254,7 +255,7 @@
 
                             <%
                             let numTimeTables = 1;
-                            if (allowMultipleEventTimeTables) {
+                            if (useAdvancedScheduling) {
                                 numTimeTables = 6;
                             }
                             %>
