--- a/views/home.ejs
+++ b/views/home.ejs
@@ -56,7 +56,7 @@ HO-01
                         <span class="pl-1">本日のイベント</span></h4>
                     <p class="card-category"><span class="eventsCount"></span>件のイベントが開催中あるいは開催予定です</p>
                     <div class="table-responsive">
-                        <table class="table table-hover">
+                        <table class="table table-sm table-hover">
                             <thead class="text-primary">
                                 <th>開始日時</th>
                                 <th>名称</th>
@@ -96,7 +96,7 @@ HO-01
                     </h4>
                     <div class="tab-content">
                         <div class="tab-pane active" id="latestReservations">
-                            <table class="table table-hover">
+                            <table class="table table-sm table-hover">
                                 <thead class="text-primary">
                                     <th class="w-25">予約番号</th>
                                     <th>日時</th>
@@ -133,13 +133,17 @@ HO-01
                 </div>
             </div>
 
-            <div class="card card-product">
+            <div class="card card-product errorReporting">
                 <div class="card-body">
                     <h4 class="card-title">
                         <i class="material-icons align-middle">report</i>
                         <span class="pl-1">Error Reporting</span></h4>
                     </h4>
-                    <p class="card-category errorReporting"></p>
+                    <p class="card-category"></p>
+                    <div class="table-responsive">
+                        <table class="table table-sm table-hover">
+                        </table>
+                    </div>
                 </div>
             </div>
 
@@ -147,7 +151,7 @@ HO-01
                 <div class="card-body">
                     <h4 class="card-title">
                         <i class="material-icons align-middle">payment</i>
-                        <span class="pl-1">集計(参考)</span></h4>
+                        <span class="pl-1">集計</span></h4>
                     </h4>
                     <dl class="row mb-0">
                         <dt class="col-md-4">予約</dt>
