--- a/views/places/movieTheater/form.ejs
+++ b/views/places/movieTheater/form.ejs
@@ -108,6 +108,19 @@
                     <% } %>
                 </div>
 
+                <div class="form-group bmd-form-group">
+                    <label for="url" class="bmd-label-static">
+                        URL
+                    </label>
+                    <input type="tel" class="form-control" name="url" id="url" placeholder="" maxlength=256
+                        value="<%= forms.url %>">
+                    <% if (errors && errors.url) { %>
+                    <span class="bmd-help text-danger d-block">
+                        <%- errors.url.msg %>
+                    </span>
+                    <% } %>
+                </div>
+
             </div>
             <div class="tab-pane" id="link2">
 
