--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -49,6 +49,7 @@ MT-01
                                     <th>コード</th>
                                     <th>名称</th>
                                     <th>電話番号</th>
+                                    <th>URL</th>
                                     <th>販売条件</th>
                                     <th>スクリーン</th>
                                     <th>POS</th>
@@ -65,10 +66,14 @@ MT-01
                                     </td>
                                     <td name="name.ja|slice">$name.ja$</td>
                                     <td name="telephone">$telephone$</td>
+                                    <td name="url__url|slice">
+                                        <a target="_blank" href="$url$">$url$
+                                            <i class="material-icons" style="font-size: 1.2em;">open_in_new</i></a>
+                                    </td>
                                     <td
                                         name="offers.eligibleQuantity.maxValue__availabilityStartsGraceTimeInDays__availabilityEndsGraceTimeInMinutes">
                                         $offers.eligibleQuantity.maxValue$ 席まで
-                                        <br>$availabilityStartsGraceTimeInDays$日前から$availabilityEndsGraceTimeInMinutes$まで販売
+                                        $availabilityStartsGraceTimeInDays$日前から$availabilityEndsGraceTimeInMinutes$まで販売
                                     </td>
                                     <td name="id" class="">
                                         <a href="javascript:void(0)" class="showContainsPlace" data-id="$id$">
