### Added - 会員サービスに特典ポイント管理を追加

--- a/views/services/membershipService/index.ejs
+++ b/views/services/membershipService/index.ejs
@@ -48,6 +48,7 @@ MS-00
                                     <th>ID</th>
                                     <th>名称</th>
                                     <th>カタログ</th>
+                                    <th>特典ポイント</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -63,6 +64,11 @@ MS-00
                                     </td>
                                     <td name="hasOfferCatalog.id">
                                         $hasOfferCatalog.id$
+                                    </td>
+                                    <td
+                                        name="serviceOutput.0.membershipPointsEarned.value__serviceOutput.0.membershipPointsEarned.unitText">
+                                        $serviceOutput.0.membershipPointsEarned.value$
+                                        $serviceOutput.0.membershipPointsEarned.unitText$
                                     </td>
                                 </tr>
                             </tbody>
