--- a/views/services/membershipService/form.ejs
+++ b/views/services/membershipService/form.ejs
@@ -23,7 +23,7 @@
                 <input type="hidden" name="id" value="<%= forms.id %>">
 
                 <div class="form-row">
-                    <div class="form-group bmd-form-group col-md-6">
+                    <div class="form-group bmd-form-group col-md-3">
                         <label for="name[ja]" class="bmd-label-static">
                             名称<span class="text-danger">＊</span>
                         </label>
@@ -38,7 +38,7 @@
                         <% } %>
                     </div>
 
-                    <div class="form-group bmd-form-group col-md-6">
+                    <div class="form-group bmd-form-group col-md-3">
                         <label for="hasOfferCatalog[id]" class="bmd-label-static">
                             オファーカタログ
                         </label>
@@ -53,6 +53,69 @@
                             <% } %>
                         </select>
                     </div>
+
+                    <div class="form-group bmd-form-group col-md-6">
+                        <label for="eligibleMonetaryAmount[][currency]" class="bmd-label-static">
+                            特典ポイント
+                        </label>
+                        <div class="input-group">
+                            <%
+                            let membershipPointsEarnedName = '';
+                            if (forms.serviceOutput !== undefined
+                                && Array.isArray(forms.serviceOutput)
+                                && forms.serviceOutput.length > 0
+                                && forms.serviceOutput[0].membershipPointsEarned !== undefined
+                            ) {
+                                membershipPointsEarnedName = forms.serviceOutput[0].membershipPointsEarned.name;;
+                            }
+                            %>
+                            <input type="text" class="form-control" name="serviceOutput[][membershipPointsEarned][name]"
+                                id="serviceOutput[][membershipPointsEarned][name]" placeholder="" maxlength=64
+                                value="<%= membershipPointsEarnedName %>">
+                            <div class="input-group-append">
+                                <span class="input-group-text" id="basic-addon2">として</span>
+                            </div>
+                            <select class="form-control" name="serviceOutput[][membershipPointsEarned][unitText]">
+                                <option value="" selected>指定しない</option>
+                                <% Object.values(accountTypes).forEach((accountType) => { %>
+                                <%
+                                const selected = forms.serviceOutput !== undefined
+                                    && Array.isArray(forms.serviceOutput)
+                                    && forms.serviceOutput.length > 0
+                                    && forms.serviceOutput[0].membershipPointsEarned !== undefined
+                                    && accountType.codeValue === forms.serviceOutput[0].membershipPointsEarned.unitText;
+                                %>
+                                <option value="<%= accountType.codeValue %>" <% if (selected) { %> selected<% } %>>
+                                    <%= accountType.codeValue %> <%= accountType.name.ja %>
+                                </option>
+                                <% }) %>
+                            </select>
+                            <div class="input-group-append">
+                                <span class="input-group-text" id="basic-addon2">を</span>
+                            </div>
+                            <%
+                            let membershipPointsEarnedValue = '';
+                            if (forms.serviceOutput !== undefined
+                                && Array.isArray(forms.serviceOutput)
+                                && forms.serviceOutput.length > 0
+                                && forms.serviceOutput[0].membershipPointsEarned !== undefined
+                            ) {
+                                membershipPointsEarnedValue = forms.serviceOutput[0].membershipPointsEarned.value;;
+                            }
+                            %>
+                            <input type="number" class="form-control"
+                                name="serviceOutput[][membershipPointsEarned][value]"
+                                id="serviceOutput[][membershipPointsEarned][value]" placeholder="" maxlength=10
+                                value="<%= membershipPointsEarnedValue %>">
+                        </div>
+
+                        <% if (errors && errors['membershipPointsEarned.0.value']) { %>
+                        <span class="bmd-help text-danger d-block">
+                            <%- errors['membershipPointsEarned.0.value'].msg %>
+                        </span>
+                        <% } %>
+                    </div>
+
                 </div>
             </div>
             <div class="tab-pane" id="link2">
