### Changed - イベントのカタログ情報をoffersからhasOfferCatalogへ分離

--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -154,7 +154,7 @@ Aa-4
                                     <th>予約</th>
                                     <th>発券</th>
                                     <th>入場</th>
-                                    <th>オファーカタログ</th>
+                                    <th>カタログ</th>
                                     <th>オファー</th>
                                     <th>追加特性</th>
                                 </tr>
