--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -132,12 +132,12 @@
             </a>
             <div class="collapse" id="services">
                 <ul class="nav">
-                    <li class="nav-item <%= (displayId === 'MS-00') ? 'active': ''; %>">
+                    <!-- <li class="nav-item <%= (displayId === 'MS-00') ? 'active': ''; %>">
                         <a class="nav-link" href="/services/membershipService">
                             <span class="sidebar-mini"><i class="material-icons">card_membership</i></span>
                             <span class="sidebar-normal">会員サービス</span>
                         </a>
-                    </li>
+                    </li> -->
 
                     <li class="nav-item <%= (displayId === 'PR-00') ? 'active': ''; %>">
                         <a class="nav-link" href="/products">
