### Changed - イベントのカタログ情報をoffersからhasOfferCatalogへ分離

--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -197,9 +197,9 @@ Aa-4
                                         <a href="#" data-toggle="tooltip"
                                             title="集計日時:$aggregateReservation.aggregateDate$">$aggregateReservation.attendeeCount$</a>
                                     </td>
-                                    <td name="offers.id__offers.id">
-                                        <a href="/offerCatalogs/$offers.id$/update" target="_blank">
-                                            $offers.id$
+                                    <td name="hasOfferCatalog.id__hasOfferCatalog.id">
+                                        <a href="/offerCatalogs/$hasOfferCatalog.id$/update" target="_blank">
+                                            $hasOfferCatalog.id$
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
                                     </td>
