### Added - スケジュール作成にリピートタイムテーブルを追加

--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -20,18 +20,18 @@
 
                             <div class="form-row">
                                 <div class="form-group bmd-form-group col-md-4 theater">
-                                    <label class="bmd-label-static" for="startTime">劇場</label>
+                                    <label class="bmd-label-static" for="startTime">施設</label>
                                     <input class="form-control" disabled type="text">
                                 </div>
                                 <div class="form-group bmd-form-group col-md-4 screen">
-                                    <label class="bmd-label-static" for="screen">スクリーン</label>
+                                    <label class="bmd-label-static" for="screen">ルーム</label>
                                     <input class="form-control" disabled type="text">
                                     <!-- <select class="form-control" name="screen"></select> -->
                                 </div>
                                 <div class="form-group bmd-form-group col-md-4">
                                     <label class="bmd-label-static" for="maximumAttendeeCapacity">キャパシティ
                                         <a href="#" data-toggle="tooltip"
-                                            title="<p class=&quot;text-left mb-0&quot;>最大収容人数を設定します。<br>座席有の場合、デフォルトでスクリーン座席数に従い、それより大きい値設定は無視されます。</p>"
+                                            title="<p class=&quot;text-left mb-0&quot;>最大収容人数を設定します。<br>座席有の場合、デフォルトでルーム座席数に従い、それより大きい値設定は無視されます。</p>"
                                             style="pointer-events: auto;">
                                             <span class="material-icons" style="font-size: 1.2em;">
                                                 help
