--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -25,13 +25,13 @@
                     <li class="nav-item <%= (displayId === 'MT-01') ? 'active': ''; %>">
                         <a class="nav-link" href="/places/movieTheater">
                             <span class="sidebar-mini"><i class="material-icons">business</i></span>
-                            <span class="sidebar-normal">劇場</span>
+                            <span class="sidebar-normal">施設(劇場)</span>
                         </a>
                     </li>
                     <li class="nav-item <%= (displayId === 'SR-01') ? 'active': ''; %>">
                         <a class="nav-link" href="/places/screeningRoom">
                             <span class="sidebar-mini"><i class="material-icons">theaters</i></span>
-                            <span class="sidebar-normal">スクリーン</span>
+                            <span class="sidebar-normal">ルーム(スクリーン)</span>
                         </a>
                     </li>
 
@@ -77,7 +77,7 @@
                     <li class="nav-item <%= (displayId === 'Aa-3') ? 'active': ''; %>">
                         <a class="nav-link" href="/events/screeningEventSeries">
                             <span class="sidebar-mini"><i class="icon far fa-calendar"></i></span>
-                            <span class="sidebar-normal">劇場上映作品</span>
+                            <span class="sidebar-normal">施設作品</span>
                         </a>
                     </li>
                     <li class="nav-item <%= (displayId === 'Aa-4') ? 'active': ''; %>">
