--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -14,7 +14,7 @@
                         <form>
                             <div class="form-row">
                                 <div class="form-group bmd-form-group col-md-3">
-                                    <label class="bmd-label-static" for="theater">劇場<font color="red">＊</font>
+                                    <label class="bmd-label-static" for="theater">施設<font color="red">＊</font>
                                     </label>
                                     <select class="form-control" name="theater">
                                         <option value="0" disabled selected> 選択してください</option>
@@ -44,15 +44,15 @@
                                     <label class="bmd-label-static" for="screen">作品
                                         <span class="text-danger">＊</span></label>
                                     <select class="form-control" name="screeningEventSeriesId">
-                                        <option value="">劇場を選択してください</option>
+                                        <option value="">施設を選択してください</option>
                                     </select>
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-3">
-                                    <label class="bmd-label-static" for="screen">スクリーン
+                                    <label class="bmd-label-static" for="screen">ルーム
                                         <span class="text-danger">＊</span></label>
                                     <select class="form-control" name="screen">
-                                        <option value="">劇場を選択してください</option>
+                                        <option value="">施設を選択してください</option>
                                     </select>
                                 </div>
 
@@ -60,7 +60,7 @@
                                     <label class="" for="maximumAttendeeCapacity">
                                         キャパシティ
                                         <a href="#" data-toggle="tooltip"
-                                            title="<p class=&quot;text-left mb-0&quot;>最大収容人数を設定します。<br>座席有の場合、デフォルトでスクリーン座席数に従い、それより大きい値設定は無視されます。</p>"
+                                            title="<p class=&quot;text-left mb-0&quot;>最大収容人数を設定します。<br>座席有の場合、デフォルトでルーム座席数に従い、それより大きい値設定は無視されます。</p>"
                                             style="pointer-events: auto;">
                                             <span class="material-icons" style="font-size: 1.2em;">
                                                 help
@@ -180,7 +180,7 @@
                                         <div class="form-check form-check-radio form-check-inline">
                                             <label class="form-check-label">
                                                 <input class="form-check-input" type="radio" name="saleStartDateType"
-                                                    id="inlineRadio1" value="default" checked>劇場設定に従う
+                                                    id="inlineRadio1" value="default" checked>施設設定に従う
                                                 <span class="circle">
                                                     <span class="check"></span>
                                                 </span>
@@ -214,7 +214,7 @@
                                     </div>
                                     <div class="form-inline d-none input-type" data-input-type="relative">
                                         <input type="text" class="form-control" name="saleStartDateRelative"
-                                            placeholder="上映日からn日" maxlength=10>
+                                            placeholder="開催日からn日" maxlength=10>
                                     </div>
                                 </div>
 
@@ -248,70 +248,138 @@
                                     </div>
                                     <div class="form-inline d-none input-type" data-input-type="relative">
                                         <input type="text" class="form-control" name="onlineDisplayStartDateRelative"
-                                            placeholder="上映日からn日" maxlength=10>
+                                            placeholder="開催日からn日" maxlength=10>
                                     </div>
                                 </div>
                             </div>
 
-                            <%
-                            let numTimeTables = 1;
-                            if (useAdvancedScheduling) {
-                                numTimeTables = 6;
-                            }
-                            %>
-                            <% for (let i = 1; i <= numTimeTables; i++) { %>
-                            <tr>
-                                <td>
-                                    <div class="form-row timeTable">
-                                        <div class="form-group bmd-form-group col-md-6 mt-0 pb-0">
-                                            <div class="input-group">
-                                                <input name="doorTime" type="text" class="form-control timepicker"
-                                                    autocomplete="off" placeholder="開場">
-                                                <div class="input-group-append">
-                                                    <span class="input-group-text">/</span>
+
+
+
+
+                            <ul class="nav nav-pills nav-pills-dark" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link active" data-toggle="tab" href="#link1" role="tablist">
+                                        時間指定
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#link2" role="tablist">
+                                        リピートする
+                                    </a>
+                                </li>
+                            </ul>
+
+                            <div class="tab-content">
+                                <div class="tab-pane active show staicTimeTablePanel" id="link1">
+                                    <%
+                                    let numTimeTables = 1;
+                                    if (useAdvancedScheduling) {
+                                        numTimeTables = 6;
+                                    }
+                                    %>
+                                    <% for (let i = 1; i <= numTimeTables; i++) { %>
+                                    <tr>
+                                        <td>
+                                            <div class="form-row timeTable">
+                                                <div class="form-group bmd-form-group col-md-6 mt-0 pb-0">
+                                                    <div class="input-group">
+                                                        <input name="doorTime" type="text"
+                                                            class="form-control timepicker" autocomplete="off"
+                                                            placeholder="開場">
+                                                        <div class="input-group-append">
+                                                            <span class="input-group-text">/</span>
+                                                        </div>
+                                                        <input name="startTime" type="text"
+                                                            class="form-control timepicker" autocomplete="off"
+                                                            placeholder="開始">
+                                                        <div class="input-group-append">
+                                                            <span class="input-group-text">~</span>
+                                                        </div>
+                                                        <select class="form-control" name="endDayRelative"
+                                                            style="width: 25%;">
+                                                            <option value="0" selected="selected">開始当日</option>
+                                                            <option value="1">翌日</option>
+                                                            <option value="2">2日後</option>
+                                                            <option value="3">3日後</option>
+                                                        </select>
+                                                        <div class="input-group-append">
+                                                            <span class="input-group-text">の</span>
+                                                        </div>
+                                                        <input name="endTime" type="text"
+                                                            class="form-control timepicker" autocomplete="off"
+                                                            placeholder="終了">
+                                                    </div>
                                                 </div>
-                                                <input name="startTime" type="text" class="form-control timepicker"
-                                                    autocomplete="off" placeholder="開始">
-                                                <div class="input-group-append">
-                                                    <span class="input-group-text">~</span>
+                                                <div class="form-group bmd-form-group col-md-4 mt-0 pb-0">
+                                                    <select class="form-control" name="ticketTypeGroup">
+                                                        <option value="" disabled selected>カタログ選択</option>
+                                                        <% for (ticketType of ticketGroups) { %>
+                                                        <option value="<%= ticketType.id %>">
+                                                            <%= ticketType.name.ja %>
+                                                        </option>
+                                                        <% } %>
+                                                    </select>
                                                 </div>
-                                                <select class="form-control" name="endDayRelative" style="width: 25%;">
-                                                    <option value="0" selected="selected">開始当日</option>
-                                                    <option value="1">翌日</option>
-                                                    <option value="2">2日後</option>
-                                                    <option value="3">3日後</option>
-                                                </select>
-                                                <div class="input-group-append">
-                                                    <span class="input-group-text">の</span>
+                                                <div class="form-group bmd-form-group col-md-2 mt-0 pb-0 mvtk">
+                                                    <div class="form-check form-check-inline">
+                                                        <label class="form-check-label"><input class="form-check-input"
+                                                                type="checkbox" name="mvtkExcludeFlg">ムビチケ不可
+                                                            <span class="form-check-sign">
+                                                                <span class="check"></span>
+                                                            </span>
+                                                        </label>
+                                                    </div>
                                                 </div>
-                                                <input name="endTime" type="text" class="form-control timepicker"
-                                                    autocomplete="off" placeholder="終了">
                                             </div>
-                                        </div>
-                                        <div class="form-group bmd-form-group col-md-4 mt-0 pb-0">
-                                            <select class="form-control" name="ticketTypeGroup">
-                                                <option value="" disabled selected>カタログ選択</option>
-                                                <% for (ticketType of ticketGroups) { %>
-                                                <option value="<%= ticketType.id %>">
-                                                    <%= ticketType.name.ja %>
-                                                </option>
-                                                <% } %>
-                                            </select>
-                                        </div>
-                                        <div class="form-group bmd-form-group col-md-2 mt-0 pb-0 mvtk">
-                                            <div class="form-check form-check-inline">
-                                                <label class="form-check-label"><input class="form-check-input"
-                                                        type="checkbox" name="mvtkExcludeFlg">ムビチケ不可
-                                                    <span class="form-check-sign">
-                                                        <span class="check"></span>
-                                                    </span>
-                                                </label>
+                                        </td>
+                                    </tr>
+                                    <% } %>
+                                </div>
+                                <div class="tab-pane repeatableTimeTablePanel" id="link2">
+
+                                    <tr>
+                                        <td>
+                                            <div class="form-row repeatableTimeTable">
+                                                <div class="form-group bmd-form-group col-md-6 mt-0 pb-0">
+                                                    <div class="input-group">
+                                                        <input name="repeatEveryMinutes" type="number"
+                                                            class="form-control" placeholder="30">
+                                                        <div class="input-group-append">
+                                                            <span class="input-group-text">分ごとに</span>
+                                                        </div>
+                                                        <input name="repeatFrom" type="text"
+                                                            class="form-control timepicker" autocomplete="off"
+                                                            placeholder="開始">
+                                                        <div class="input-group-append">
+                                                            <span class="input-group-text">から</span>
+                                                        </div>
+                                                        <input name="repeatThrough" type="text"
+                                                            class="form-control timepicker" autocomplete="off"
+                                                            placeholder="終了">
+                                                        <div class="input-group-append">
+                                                            <span class="input-group-text">まで</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group bmd-form-group col-md-4 mt-0 pb-0">
+                                                    <select class="form-control" name="ticketTypeGroup">
+                                                        <option value="" disabled selected>カタログ選択</option>
+                                                        <% for (ticketType of ticketGroups) { %>
+                                                        <option value="<%= ticketType.id %>">
+                                                            <%= ticketType.name.ja %>
+                                                        </option>
+                                                        <% } %>
+                                                    </select>
+                                                </div>
                                             </div>
-                                        </div>
-                                    </div>
-                                </td>
-                            </tr>
-                            <% } %>
+                                        </td>
+                                    </tr>
+
+                                </div>
+                            </div>
+
+
                         </form>
                     </div>
                 </div>
