--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -36,7 +36,7 @@ Aa-4
 
                             <div class="form-row">
                                 <div class="form-group bmd-form-group col-md-2">
-                                    <label class="bmd-label-static">劇場 <span class="text-danger">＊</span></label>
+                                    <label class="bmd-label-static">施設 <span class="text-danger">＊</span></label>
 
                                     <div class="input-group">
                                         <select class="form-control" name="theater">
@@ -54,9 +54,9 @@ Aa-4
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-2">
-                                    <label class="bmd-label-static">スクリーン</label>
+                                    <label class="bmd-label-static">ルーム</label>
                                     <select class="form-control" name="screen">
-                                        <option value="">劇場を選択してください</option>
+                                        <option value="">施設を選択してください</option>
                                     </select>
                                 </div>
 
@@ -70,7 +70,7 @@ Aa-4
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-1">
-                                    <label class="bmd-label-static">上映日 <span class="text-danger">＊</span></label>
+                                    <label class="bmd-label-static">開催日 <span class="text-danger">＊</span></label>
 
                                     <input autocomplete="off" class="form-control datepicker" name="date"
                                         placeholder="選択してください" maxlength="10">
@@ -146,8 +146,8 @@ Aa-4
                                     <th>ID</th>
                                     <th>ステータス</th>
                                     <th>作品</th>
-                                    <th>劇場</th>
-                                    <th>場所</th>
+                                    <th>施設</th>
+                                    <th>ルーム</th>
                                     <th>開始</th>
                                     <th>終了</th>
                                     <th>キャパシティ</th>
